Improve resize columns and fix css spacing issue

--- a/less/style.less
+++ b/less/style.less
@@ -768,7 +768,8 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   padding-left: 5px;
-
+  height: inherit;
+  padding-top: 8px;
 }
 .tb-th {
   display: inline-block;
